--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,12 @@ body{
 
 .hstyles{
     text-shadow: -1.5px 0 black, 0 1.5px black, 1.5px 0 black, 0 -1.5px black;
-    color: rgb(54, 124, 182);
+    color: rgb(206, 111, 148);
 }
 
 .dstyles{
     background: rgba(89, 214, 208, 0.781);
-    width: 150px;
+    width: 200px;
 }
 
 .cstyles{
@@ -26,6 +26,8 @@ body{
     background: url(../images/p4gbg.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    margin-top: 100px;
+    max-width: 540px;
 }
 
 .cust-faded-bg{
